# WEB-Python-HW7

./: README.md  alembic.ini  config.ini  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 3d9bc1dc08c1_init.py
source/: models.py
